quorum/test/tests/TypeChecker/Pass/ExpAssignTextInteger.quorum
text t = cast(text, 5)