quorum/test/tests/TypeChecker/Fail/ExpAssignBoolObjText.quorum
Boolean bool = cast(Boolean, "text")